[*] add GLTFLoader, start animation

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+
+<head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Three.js template</title>
   <style>
     html, body {
       margin: 0;
@@ -18,5 +22,7 @@
 
 <body>
   <canvas id="root"></canvas>
+  <script src="dist/bundle.js"></script>
 </body>
+
 </html>
