--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
       background-color: #c2c0bc;
     }
   </style>
-  <link rel="stylesheet" href="interface/styles.css">
+  <link rel='stylesheet' href='dist/style.css'>
 </head>
 
 <body>
-  <div class="interface">
-    <p>для перемещения нажмите ЛКМ в точку на земле, куда хотите переместиться</p>
-    <p>для атаки нажмите ПКМ по объекту, который хотите атаковать</p>
-  </div>
+  <div id="interface"></div>
   <canvas id="root"></canvas>
   <script src="dist/bundle.js"></script>
 </body>
